--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,5 +14,57 @@
         <p>Shopme Control Panel - Copyright &copy; Shopme</p>
     </div>
 
+
+    <a th:fragment="page_link(moduleURL, pageNum, label)"
+       class="page-link"
+       th:href="@{ ${moduleURL} + '/page/' + ${pageNum} + '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">
+        [[${label}]]
+    </a>
+
+
+    <!---------------------------------- Page navigation -------------------------------->
+    <div th:fragment="pagination(moduleURL, entityName)" th:remove="tag">
+        <div class="text-center m-1" th:if="${totalItems > 0}">
+            <span>Showing [[${entityName}]] # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+        </div>
+        <div class="text-center m-1" th:unless="${totalItems > 0}">
+            <span>No [[${entityName}]] found !!!</span>
+        </div>
+
+
+        <div th:if="${totalPages > 1}">
+            <h1> Inside page navigation</h1>
+            <nav >
+                <ul class="pagination justify-content-center flex-wrap">
+
+                    <!--      <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">-->
+                    <!--       <a class="page-link" th:href="@{'/users/page/1?sortField=' + ${sortField} + '&sortDir=' + ${sortDir} + ${keyword != null ? '&keyword=' + keyword : ''}}">First</a>-->
+                    <!--   </li>-->
+                    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                        <a th:replace="fragments :: page_link(${moduleURL}, 1, 'First')"></a>
+                    </li>
+                    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+                        <a th:replace="fragments :: page_link(${moduleURL}, ${currentPage - 1}, 'Previous')"></a>
+                    </li>
+
+                    <!-- to show current page : this number will be highlighted-->
+                    <li th:each="i : ${#numbers.sequence(1, totalPages)}"
+                        th:class="${currentPage != i ? 'page-item' : 'page-item active'}">
+                        <a th:replace="fragments :: page_link(${moduleURL}, ${i}, ${i})"></a>
+                    </li>
+
+
+                    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                        <a th:replace="fragments :: page_link(${moduleURL}, ${currentPage + 1}, 'Next')"></a>
+                    </li>
+                    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+                        <a th:replace="fragments :: page_link(${moduleURL}, ${totalPages}, 'Last')"></a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+    </div>
+
 </body>
 </html>
