--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -9,7 +9,7 @@
                 <img th:src="@{/images/ShopmeAdminSmall.png}"/>
             </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar, #searchNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Register</a>
+                        <a class="nav-link" th:href="@{/register}">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Contact</a>
@@ -36,6 +36,20 @@
                 </ul>
             </div>
         </nav>
+    </div>
+
+    <div th:fragment="search_nav" class="row">
+        <div class="col-md">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="collapse navbar-collapse" id="searchNavbar">
+                    <form th:action="@{/search}" class="form-inline">
+                        <input type="search" name="keyword" class="form-control mr-sm-2"
+                               th:value="${keyword}" placeholder="keyword" required="required">
+                        <input type="submit" value="search" class="btn btn-outline-success">
+                    </form>
+                </div>
+            </nav>
+        </div>
     </div>
 
     <div th:fragment="footer_menu">
@@ -62,7 +76,7 @@
         </div>
 
         <div th:fragment = "footer" class="text-center m-3">
-            <p>Shopme - Copyright &copy; Shopme Ltd.</p>
+            <p>[[${COPYRIGHT}]]</p>
         </div>
     </div>
  </body>
