--- a/src/main/resources/templates/product/product_by_category.html
+++ b/src/main/resources/templates/product/product_by_category.html
@@ -4,30 +4,12 @@
 
 <body>
 <div class="container-fluid">
-  <div th:replace="navigation :: header_menu"></div>
-
+    <div th:replace="navigation :: header_menu"></div>
+    <div th:replace="navigation :: search_nav"></div>
     <!--  Showing BreadCrumb-->
-    <div th:if="${listCategoryParents != null && !listCategoryParents.empty}">
-      <div class="row">
-         <div class="col">
-             <nav>
-                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                      <a th:href="@{/}">Home</a>
-                    </li>
+    <div th:replace="breadcrumb :: content"></div>
 
-                   <th:block th:each="parent : ${listCategoryParents}">
-                     <li class="breadcrumb-item">
-                       <a th:href="@{'/c/' + ${parent.alias}}">[[${parent.name}]]</a>
-                     </li>
-                   </th:block>
-                 </ol>
-             </nav>
-         </div>
-      </div>
-  </div>
-
-<!--  Showing the enabled Children Category-->
+    <!--  Showing the enabled Children Category-->
   <div class="row text-center">
       <th:block th:each="cat : ${category.children}">
           <div class="col" th:if="${cat.enabled == true}">
@@ -44,23 +26,24 @@
 <!--    Showing Products-->
   <div class="row">
       <th:block th:each="product : ${listProducts}">
-          <div class="col">
-              <div>
-                  <a th:href="@{'/p/' + ${product.alias}}">
-                      <img th:src="@{${product.mainImagePath}}"  width="150px" alt="">
-                      <br>
-                      <b>[[${product.shortName}]]</b>
-                  </a>
-              </div>
-              <div th:if="${product.discountPercent <= 0}">
-                  <span>$[[${product.price}]]</span>
-              </div>
-              <div th:if="${product.discountPercent > 0}">
-                  <span style="font-size:larger; color:darkred" >$[[${product.discountPrice}]]</span>
-                  &nbsp;
-                  <del><span>$[[${product.price}]]</span></del>
-              </div>
-          </div>
+          <div th:replace="product/product_fragment :: content"></div>
+<!--          <div class="col">-->
+<!--              <div>-->
+<!--                  <a th:href="@{'/p/' + ${product.alias}}">-->
+<!--                      <img th:src="@{${product.mainImagePath}}"  width="150px" alt="">-->
+<!--                      <br>-->
+<!--                      <b>[[${product.shortName}]]</b>-->
+<!--                  </a>-->
+<!--              </div>-->
+<!--              <div th:if="${product.discountPercent <= 0}">-->
+<!--                  <span>$[[${product.price}]]</span>-->
+<!--              </div>-->
+<!--              <div th:if="${product.discountPercent > 0}">-->
+<!--                  <span style="font-size:larger; color:darkred" >$[[${product.discountPrice}]]</span>-->
+<!--                  &nbsp;-->
+<!--                  <del><span>$[[${product.price}]]</span></del>-->
+<!--              </div>-->
+<!--          </div>-->
       </th:block>
   </div>
 
