--- a/src/main/resources/templates/product/product_details.html
+++ b/src/main/resources/templates/product/product_details.html
@@ -4,16 +4,27 @@
 
 <body>
 <div class="container-fluid">
-  <div th:replace="navigation :: header_menu"></div>
-
-<!--  Showing BreadCrumb-->
+    <div th:replace="navigation :: header_menu"></div>
+    <div th:replace="navigation :: search_nav"></div>
+    <!--  Showing BreadCrumb-->
     <div th:replace="breadcrumb :: content"></div>
 
   <div class="row">
      <div class="col-sm">
         <div>
-          <img th:src="@{${product.mainImagePath}}" alt="Product Image" class="img-fluid"/>
+          <img id="bigImage" th:src="@{${product.mainImagePath}}" alt="Product Image" index="0"/>
         </div>
+          <div class="row justify-content-center"> <!-- Showing All images in small-->
+              <div class="m-2 border border-secondary">
+                  <img th:src="@{${product.mainImagePath}}" height="50px" class="image-thumbnail" index="0">
+              </div>
+              <th:block th:each="extraImage, status : ${product.images}">
+                  <div class="m-2 border border-secondary">
+                      <img class="image-thumbnail" th:src="@{${extraImage.imagePath}}" height="50px"
+                            th:index="${status.count}"/>
+                  </div>
+              </th:block>
+         </div>
      </div>
 
       <div class="col-sm">
@@ -79,7 +90,28 @@
         </div>
     </div>
 
-  <div th:replace="navigation :: footer_menu"></div>
+
+    <div th:replace="product/images_carousel :: content"></div>
+    <div th:replace="navigation :: footer_menu"></div>
 </div>
+
+<script>
+    $(document).ready(function(){
+        bigImage = $("#bigImage");
+        $(".image-thumbnail").mouseover(function(){
+            currentImageSource = $(this).attr("src");
+            currentImageIndex = $(this).attr("index");
+
+            bigImage.attr("src", currentImageSource);
+            bigImage.attr("index", currentImageIndex);
+        });
+
+        bigImage.on("click", function(){
+            $("#carouselModal").modal("show");
+            imageIndex = parseInt(bigImage.attr("index"));
+            $("#carouselExampleIndicators").carousel(imageIndex);
+        });
+    });
+</script>
 </body>
 </html>
