--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,11 +8,11 @@
 		<h2>Customer Login</h2>
 	</div>
 	
-<!--	<div class="mt-3">-->
-<!--		<a class="btn btn-lg btn-secondary fab fa-google" th:href="@{/oauth2/authorization/google}">&nbsp;&nbsp;Continue with Google</a>-->
-<!--	</div>-->
-<!--	-->
-<!--	<div>&nbsp;</div>-->
+	<div class="mt-3">							<!--    This url is defined by spring security client library -->
+		<a class="btn btn-lg btn-secondary fab fa-google" th:href="@{/oauth2/authorization/google}">&nbsp;&nbsp;Continue with Google</a>
+	</div>
+
+	<div>&nbsp;</div>
 	
 	<form th:action="@{/login}" method="post" style="max-width: 350px; margin: 0 auto">
 		<div th:if="${param.error}">
