--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -83,7 +83,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link fas fa-shopping-cart fa-2x" th:href="@{/cart}"></a>
+                                <a class="nav-link fas fa-shopping-cart fa-2x" title="cart" th:href="@{/cart}"></a>
                             </li>
 
                             <li class="nav-item">
