--- a/src/main/resources/templates/cart/shopping_cart.html
+++ b/src/main/resources/templates/cart/shopping_cart.html
@@ -31,6 +31,7 @@
                                     <b>[[${item.product.shortName}]]</b>
                                 </a>
                             </div>
+
                             <div th:replace="cart/quantity_control :: quantity_control(${item.quantity}, ${item.product.id})"></div>
 
                             <div>
@@ -61,7 +62,10 @@
 
                                 <div>
                                     <span>&nbsp;</span>
-                                    <span class="h4">= [[${item.subTotal}]] [[${CURRENCY_SYMBOL}]]</span>
+<!--                                    <span th:id="'subtotal' + ${item.product.id}" class="h4 subTotal">-->
+<!--						                [[${#numbers.formatDecimal(item.subTotal, 1, THOUSANDS_POINT_TYPE, DECIMAL_DIGITS, DECIMAL_POINT_TYPE)}]]-->
+<!--						            </span>-->
+                                    <span th:id="'subTotal' + ${item.product.id}" class="h4 subTotal">[[${item.subTotal}]]</span>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +80,7 @@
                 </div>
                 <div class="mt-2">
                     <span th:if="${CURRENCY_SYMBOL_POSITION == 'After price'}" th:remove="tag">
-                       <span class="h2">[[${estimatedTotal}]] [[${CURRENCY_SYMBOL}]]</span>
+                       <span id="total" class="h2">[[${estimatedTotal}]] [[${CURRENCY_SYMBOL}]]</span>
                     </span>
                 </div>
                 <div class="mt-2">
@@ -89,7 +93,17 @@
             <h3>Your Cart is Empty.</h3>
         </div>
 
+        <div th:replace="fragments :: modal_dialog"></div>
         <div th:replace="navigation :: footer_menu"></div>
     </div>
+<script th:src="@{/js/jquery.number.min.js}"></script>
+<script th:src="@{/js/shopping_cart.js}"></script>
+<script th:src="@{/js/common_modal.js}"></script>
+
+    <script>
+        contextPath = "[[@{/}]]";
+        var csrfHeaderName = "[[${_csrf.headerName}]]";
+        var csrfValue = "[[${_csrf.token}]]";
+    </script>
 </body>
 </html>
