--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 
         <div class="row">
             <div class="col-sm-2" th:each="cat : ${listCategories}">
+<!--                <img th:src="@{/images/ShopmeAdminSmall.png}"/>-->
                 <div><img th:src="@{${cat.imagePath}}" width="90px"></div>
                 <div>
                     <a th:href="@{'/c/' + ${cat.alias}}">[[${cat.name}]]</a>
