--- a/src/main/resources/templates/product/images_carousel.html
+++ b/src/main/resources/templates/product/images_carousel.html
@@ -14,11 +14,13 @@
                   <div class="carousel-inner">
                       <div class="carousel-item active">
                           <img th:src="@{${product.mainImagePath}}" alt="Product Image" class="img-fluid"/>
+<!--                          <img th:src="@{/images/ShopmeAdminSmall.png}"/>-->
                       </div>
 
                       <th:block th:each="extraImage : ${product.images}">
                           <div class="carousel-item">
                               <img th:src="@{${extraImage.imagePath}}" class="img-fluid">
+<!--                              <img th:src="@{/images/ShopmeAdminSmall.png}"/>-->
                           </div>
                       </th:block>
                   </div>
