--- a/src/main/resources/templates/cart/shopping_cart.html
+++ b/src/main/resources/templates/cart/shopping_cart.html
@@ -84,7 +84,20 @@
 <!--                    </span>-->
                 </div>
                 <div class="mt-2">
-                    <button class="btn btn-danger p3 mt-2">Check Out</button>
+                    <div th:if="${shippingSupported}">
+                        <button class="btn btn-danger p3 mt-2">Check Out</button>
+                    </div>
+                    <br>
+                    <div th:unless="${shippingSupported}">
+                        <div><span class="h5 text-warning">No Shipping Available for your location!!!</span></div>
+                    </div>
+                    <div th:if="${usePrimaryAddressAsDefault}">
+                        <a th:href="@{/account_details(redirect=cart)}" class="h6">Update your address</a>
+                    </div>
+                    <div th:unless="${usePrimaryAddressAsDefault}">
+                        <a th:href="@{/address_book(redirect=cart)}" class="h6">Use another shipping address</a>
+                    </div>
+
                 </div>
             </div>
         </div>
