--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -8,7 +8,11 @@
 
       <div class="container-fluid">
         <div class="text-center">
-            <h2>Sorry, you don't have permission to access this page</h2>
+<!--            <h2>Sorry, you don't have permission to access this page</h2>-->
+            <img src="../../static/images/notfound.jpg" width="480" height="360" />
+            <h1 class="ud-heading-serif-xxl error__greeting">
+                We can’t find the page you’re looking for
+            </h1>
         </div>
       </div>
       <div th:replace="navigation :: footer_menu"></div>
