--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -9,7 +9,11 @@
 
       <div class="container-fluid">
         <div class="text-center mt-5">
-            <h2>Sorry, the requested page could not be found</h2>
+<!--            <h2>Sorry, the requested page could not be found</h2>-->
+            <img th:src="@{/images/notfound.jpg}" width="480" height="360" />
+            <h1 class="ud-heading-serif-xxl error__greeting">
+                We can’t find the page you’re looking for
+            </h1>
         </div>
       </div>
 
