--- a/src/main/resources/templates/address_book/addresses.html
+++ b/src/main/resources/templates/address_book/addresses.html
@@ -104,8 +104,7 @@
 		entityId = link.attr("entityId");
 
 		$("#yesButton").attr("href", link.attr("href"));
-		$("#confirmText").text("Are you sure you want to delete this "
-				+ entityName + " ID " + entityId + "?");
+		$("#confirmText").text("Are you sure you want to delete this " + entityName);
 		$("#confirmModal").modal();
 	}
 </script>
