--- a/src/main/resources/templates/cart/quantity_control.html
+++ b/src/main/resources/templates/cart/quantity_control.html
@@ -9,7 +9,7 @@
                 <a class="page-link linkMinus" th:pid="${productId}" href=""><b>-</b></a>
             </li>
             <li class="page-item">
-                <input type="text" th:value=${quantityValue} th:id="'quantity' + ${productId}"
+                <input type="text" th:value="${quantityValue}" th:id="'quantity' + ${productId}"
                        onkeydown="return false;"
                        class="form-control text-center" style="width:50px">
             </li>
