--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -15,15 +15,15 @@
 
             <div class="collapse navbar-collapse" id="topNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                       <a class="nav-link" href="">Careers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Payments</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Shipping &amp; Delivery</a>
-                    </li>
+<!--                    <li class="nav-item">-->
+<!--                       <a class="nav-link" href="">Careers</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="">Payments</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="">Shipping &amp; Delivery</a>-->
+<!--                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/login}">Login</a>
                     </li>
@@ -70,13 +70,13 @@
                                 <a class="nav-link" th:href="@{/address_book}">Address Book</a>
                             </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link" th:href="@{/customer/questions}">Questions</a>
-                            </li>
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" th:href="@{/customer/questions}">Questions</a>-->
+<!--                            </li>-->
 
-                            <li class="nav-item">
-                                <a class="nav-link" th:href="@{/reviews}">Reviews</a>
-                            </li>
+<!--                            <li class="nav-item">-->
+<!--                                <a class="nav-link" th:href="@{/reviews}">Reviews</a>-->
+<!--                            </li>-->
 
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/orders}">Orders</a>
