--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -6,7 +6,8 @@
     <div th:fragment="header_menu">
         <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
             <a th:href="@{/}" class="navbar-brand">
-                <img th:src="@{/images/ShopmeAdminSmall.png}"/>
+<!--                <img th:src="@{/images/ShopmeAdminSmall.png}"/>-->
+                <img th:src="@{${S3_BASE_URI + SITE_LOGO}}"/>
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar, #searchNavbar">
