--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,6 +23,27 @@
         [[${label}]]
     </a>
 
+    <!------------------------------ search filter ------------------------------------->
+    <div th:fragment="search_form(moduleURL)">
+        <form  th:action="@{${moduleURL}}" class="form-inline m-3">
+            <!-- when search button will be clicked the value of sortField and sortDir we be given into the url -->
+            <input type="hidden" name="sortField" th:value="${sortField}"/>
+            <input type="hidden" name="sortDir" th:value="${sortDir}"/>
+            Filter: &nbsp;
+            <input type="search" name="keyword" th:value="${keyword}"  class="form-control" required/>
+            &nbsp; &nbsp;
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-search"></i>
+            </button>
+
+            &nbsp; &nbsp;
+            <button type="button"  class="btn btn-secondary" onclick="clearFilter()">
+                <i class="fas fa-eraser"></i>
+            </button>
+        </form>
+    </div>
+
+
     <!---------------------------------- Page navigation -------------------------------->
     <div th:fragment="pagination(moduleURL, entityName)" th:remove="tag">
         <div class="text-center m-1" th:if="${totalItems > 0}">
