--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -75,9 +75,9 @@
 <!--                                <a class="nav-link" th:href="@{/customer/questions}">Questions</a>-->
 <!--                            </li>-->
 
-<!--                            <li class="nav-item">-->
-<!--                                <a class="nav-link" th:href="@{/reviews}">Reviews</a>-->
-<!--                            </li>-->
+                            <li class="nav-item">
+                                <a class="nav-link" th:href="@{/reviews}">Reviews</a>
+                            </li>
 
                             <li class="nav-item">
                                 <a class="nav-link" th:href="@{/orders}">Orders</a>
