--- a/src/main/resources/templates/product/product_details.html
+++ b/src/main/resources/templates/product/product_details.html
@@ -46,9 +46,8 @@
               </div>
 
               <div class="col-xs ml-1 mt-3">
-                  [[${product.reviewCount}]] rating(s)
+                  <a th:href="@{${product.URI} + '#review'}">[[${product.reviewCount}]] rating(s)</a>
               </div>
-
 
           </div>
           <div>
@@ -119,6 +118,8 @@
     <div th:replace="product/images_carousel :: content"></div>
     <div th:replace="navigation :: footer_menu"></div>
     <div th:replace="fragments :: modal_dialog"></div>
+
+    <div th:replace="product/product_top_reviews :: content"></div>
 </div>
 
 <script>
@@ -143,16 +144,11 @@
             $("#carouselExampleIndicators").carousel(imageIndex);
         });
 
-        $(".product-detail-rating-star").rating({
-            displayOnly: true,
-            hoverOnClear: false,
-            showCaption: false,
-            theme: 'krajee-svg'
-        })
     });
 </script>
 <script th:src="@{/js/common_modal.js}"></script>
 <script th:src="@{/js/quantity_control.js}"></script>
 <script th:src="@{/js/add_to_cart.js}"></script>
+<script type="text/javascript" th:src="@{/js/common_rating.js}"></script>
 </body>
 </html>
