--- a/src/main/resources/templates/orders/order_details_modal.html
+++ b/src/main/resources/templates/orders/order_details_modal.html
@@ -136,6 +136,15 @@
                             </div>
                         </th:block>
 
+                        <div th:if="${!product.reviewedByCustomer && product.customerCanReview}">
+                            <a href="" class="btn btn-info">Write Review</a>
+                        </div>
+
+                        <div th:if="${product.reviewedByCustomer}">
+                            <a th:href="@{'/reviews/page/1?sortField=reviewTime&sortDir=desc&keyword='
+                            + ${#strings.substring(product.shortName, 0, 15)}}" class="btn btn-warning">See your Review</a>
+                        </div>
+
                     </div>
                 </div>
             </th:block>
