Implement : Write Review Functionality

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -15,7 +15,12 @@
                 We can’t find the page you’re looking for
             </h1>
         </div>
+          &nbsp;
+          &nbsp;
+          &nbsp;
+          &nbsp;
       </div>
+
 
       <div th:replace="navigation :: footer_menu"></div>
     </div>
