--- a/src/main/resources/templates/customer/account_form.html
+++ b/src/main/resources/templates/customer/account_form.html
@@ -22,8 +22,11 @@
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label">Authentication Type:</label>
                     <div class="col-sm-8">
-                        <input type="text" th:field="*{authenticationType}" class="form-control" readonly="readonly"/>
+                        <div class="form-control" style="background-color: #e9ecef; border: 1px solid #ced4da; border-radius: .25rem; padding: .375rem .75rem;"></div>
+<!--                        <div class="form-control" style="background-color: #e9ecef; border: 1px solid #ced4da;-->
+<!--                         border-radius: .25rem; padding: .375rem .75rem;">[[${customer.authenticationType}]]</div>-->
                     </div>
+
                 </div>
                 <div class="form-group row">
                     <label class="col-sm-4 col-form-label">E-mail:</label>
