Implement Presigned URL for Category images

--- a/src/main/resources/templates/product/product_by_category.html
+++ b/src/main/resources/templates/product/product_by_category.html
@@ -42,12 +42,12 @@
 <!--                  </a>-->
 <!--              </div>-->
 <!--              <div th:if="${product.discountPercent <= 0}">-->
-<!--                  <span>$[[${product.price}]]</span>-->
+<!--                  <span>₹[[${product.price}]]</span>-->
 <!--              </div>-->
 <!--              <div th:if="${product.discountPercent > 0}">-->
-<!--                  <span style="font-size:larger; color:darkred" >$[[${product.discountPrice}]]</span>-->
+<!--                  <span style="font-size:larger; color:darkred" >₹[[${product.discountPrice}]]</span>-->
 <!--                  &nbsp;-->
-<!--                  <del><span>$[[${product.price}]]</span></del>-->
+<!--                  <del><span>₹[[${product.price}]]</span></del>-->
 <!--              </div>-->
 <!--          </div>-->
       </th:block>
