--- a/src/main/resources/templates/product/search_result.html
+++ b/src/main/resources/templates/product/search_result.html
@@ -30,10 +30,11 @@
                         </a>
                     </div>
                     <div th:if="${product.discountPercent <= 0}">
-                        <span>$[[${product.price}]]</span>
+                        <span>₹[[${product.price}]]</span>
                     </div>
                     <div th:if="${product.discountPercent > 0}">
-                        <span style="font-size:larger; color:darkred" >$[[${product.discountPrice}]]</span>
+                        <span style="font-size:larger; color:darkred" >₹[[${product.discountPrice}]]</span>
+                        ([[${product.discountPercent}]] % off)
                         &nbsp;
                         <del><span>$[[${product.price}]]</span></del>
                     </div>
