--- a/src/main/resources/templates/address_book/address_form.html
+++ b/src/main/resources/templates/address_book/address_form.html
@@ -95,7 +95,9 @@
 
 		<div class="text-center">
 			<input type="submit" value="Save" class="btn btn-primary" />
+			<input type="button" value="Cancel" class="btn btn-secondary" id="buttonCancel"/>
 		</div>
+
 	</div>
 	</form>
 
@@ -104,6 +106,7 @@
 </div>
 <script type="text/javascript">
 	contextPath = "[[@{/}]]";
+	moduleURL = "[[@{/}]]";
 </script>
 <script type="text/javascript" th:src="@{/js/common_customer_form.js}"></script>
 </body>
