--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col-sm-2" th:each="cat : ${listCategories}">
 <!--                <img th:src="@{/images/ShopmeAdminSmall.png}"/>-->
-                <div><img th:src="@{${cat.imagePath}}" width="90px"></div>
+                <div><img th:src="@{${cat.preSignedURL}}" width="90px"></div>
                 <div>
                     <a th:href="@{'/c/' + ${cat.alias}}">[[${cat.name}]]</a>
                 </div>
