--- a/src/main/resources/templates/product/product_fragment.html
+++ b/src/main/resources/templates/product/product_fragment.html
@@ -9,6 +9,17 @@
                 <b>[[${product.shortName}]]</b>
             </a>
         </div>
+
+         <div th:if="${product.discountPercent <= 0}">
+             <span>₹[[${product.price}]]</span>
+         </div>
+         <div th:if="${product.discountPercent > 0}">
+             <span style="font-size:larger; color:darkred" >₹[[${product.discountPrice}]]</span>
+             ([[${product.discountPercent}]] % off)
+             &nbsp;
+             <del><span>₹[[${product.price}]]</span></del>
+         </div>
+
          <div>
              <table>
                  <tr>
