--- a/src/main/resources/templates/product/product_details.html
+++ b/src/main/resources/templates/product/product_details.html
@@ -19,16 +19,19 @@
      <div class="col-sm">
         <div>
 <!--            <img id="bigImage" th:src="@{/images/ShopmeAdminSmall.png}"/>-->
-          <img id="bigImage" th:src="@{${product.mainImagePath}}" alt="Product Image" index="0"/>
+<!--          <img id="bigImage" th:src="@{${product.mainImagePath}}" alt="Product Image" index="0"/>-->
+            <img id="bigImage" th:src="@{${product.getPreSignedURL()}}" alt="Product Image" index="0"/>
         </div>
           <div class="row justify-content-center"> <!-- Showing All images in small-->
               <div class="m-2 border border-secondary">
 <!--                  <img th:src="@{/images/ShopmeAdminSmall.png}"/>-->
-                  <img th:src="@{${product.mainImagePath}}" height="50px" class="image-thumbnail" index="0">
+<!--                  <img th:src="@{${product.mainImagePath}}" height="50px" class="image-thumbnail" index="0">-->
+                  <img th:src="@{${product.getPreSignedURL()}}" alt="Product Image" index="0"/>
               </div>
               <th:block th:each="extraImage, status : ${product.images}">
                   <div class="m-2 border border-secondary">
-                      <img class="image-thumbnail" th:src="@{${extraImage.imagePath}}" height="50px" th:index="${status.count}"/>
+<!--                      <img class="image-thumbnail" th:src="@{${extraImage.imagePath}}" height="50px" th:index="${status.count}"/>-->
+                      <img class="image-thumbnail" th:src="@{${extraImage.getPreSignedURL()}}" height="50px" th:index="${status.count}"/>
 <!--                      <img th:src="@{/images/ShopmeAdminSmall.png}"/>-->
                   </div>
               </th:block>
