--- a/src/main/resources/templates/cart/shopping_cart.html
+++ b/src/main/resources/templates/cart/shopping_cart.html
@@ -26,7 +26,7 @@
 
                         <div class="col-3">
                             <a th:href="@{'/p/' + ${item.product.alias}}" target="_blank" th:title="${item.product.name}">
-                                <img th:src="@{${item.product.mainImagePath}}" class="img-fluid">
+                                <img th:src="@{${item.product.getPreSignedURL()}}" class="img-fluid">
                             </a>
                             <span>Price : [[${item.product.discountPrice}]] ₹</span>
 
