--- a/src/main/resources/templates/product/product_fragment.html
+++ b/src/main/resources/templates/product/product_fragment.html
@@ -4,7 +4,7 @@
      <div th:fragment="content" class="col-sm-2">
         <div>
             <a th:href="@{'/p/' + ${product.alias}}">
-                <img th:src="@{${product.mainImagePath}}"  width="150px" alt="">
+                <img th:src="@{${product.getPreSignedURL()}}"  width="150px" alt="">
                 <br>
                 <b>[[${product.shortName}]]</b>
             </a>
