--- a/src/main/resources/templates/product/search_result.html
+++ b/src/main/resources/templates/product/search_result.html
@@ -24,7 +24,7 @@
                 <div class="col">
                     <div>
                         <a th:href="@{'/p/' + ${product.alias}}">
-                            <img th:src="@{${product.mainImagePath}}"  width="150px" alt="">
+                            <img th:src="@{${product.getPreSignedURL()}}"  width="150px" alt="">
                             <br>
                             <b>[[${product.shortName}]]</b>
                         </a>
