--- a/src/main/resources/templates/reviews/reviews_product.html
+++ b/src/main/resources/templates/reviews/reviews_product.html
@@ -14,7 +14,7 @@
 
     <div class="row m-2">
         <div class="col-xs-4">
-            <img th:src="@{${product.mainImagePath}}" width="150">
+            <img th:src="@{${product.getPreSignedURL()}}" width="150">
         </div>
         <div class="col-xs-8">
             <div><a th:href="@{'/p/' + ${product.alias}}"><h3>[[${product.name}]]</h3></a></div>
